# api/swagger/swagger.yaml
@@ -4,26 +4,20 @@ info:
   title: Short Breaks code test
 # during dev, should point to your local machine
 host: localhost:10010
-# basePath prefixes all resource paths 
 basePath: /
 # 
 schemes:
-  # tip: remove http to make production-grade
   - http
   - https
-# format of bodies a client can send (Content-Type)
 consumes:
   - application/json
-# format of the responses to the client (Accepts)
 produces:
   - application/json
 paths:
   /user/{id}:
-    # binds a127 app logic to a route
     x-swagger-router-controller: "user"
     get:
       description: "Gets the user with the specified id"
-      # used as the method name of the controller
       operationId: "getUser"
       produces:
       - "application/json"
@@ -32,17 +26,16 @@ paths:
           in: path
           description: "id of user to return"
           required: true
-          type: integer
+          type: string
       responses:
         200:
           description: Success
           schema:
-            # a pointer to a definition
             $ref: "#/definitions/User"
         400:
           description: "Invalid ID"
-          schema:
-             $ref: "#/definitions/ErrorResponse"
+        404:
+          description: "User not found"
     delete:
       description: "Deletes the user with the specified id"
       operationId: "deleteUser"
@@ -53,7 +46,7 @@ paths:
           in: path
           description: "id of user to delete"
           required: true
-          type: integer
+          type: string
       responses:
         200:
           description: Success
@@ -61,8 +54,6 @@ paths:
             $ref: "#/definitions/UserApiResponse"
         400:
           description: "Invalid ID"
-          schema:
-             $ref: "#/definitions/ErrorResponse"
     put:
       description: "User details will be updated for the given user id"
       operationId: "updateUser"
@@ -71,7 +62,7 @@ paths:
           in: path
           description: "id of user to update"
           required: true
-          type: integer
+          type: string
         - name: "user"
           in: body
           description: "User object containing email, forename and surname. All these fields are optional."
@@ -83,6 +74,8 @@ paths:
           description: "Success. Full user object returned in body."
           schema:
             $ref: "#/definitions/User"
+        400:
+          description: "Invalid parameter"
   /user:
     x-swagger-router-controller: user
     post:
@@ -91,7 +84,7 @@ paths:
       parameters:
         - name: "user"
           in: body
-          description: "User object, in which the email, forename and surname should be set."
+          description: "User object, in which the email, forename and surname should be set. Forename and surname should each be at least 3 characters long."
           required: true
           schema:
             $ref: "#/definitions/User"
@@ -105,14 +98,40 @@ paths:
               description: "Relative URL of the new user"
           schema:
             $ref: "#/definitions/User"
-    
+        400:
+          description: "Invalid parameter"
+  /users:
+    x-swagger-router-controller: user
+    get:
+      description: "Returns a list of users, optionally filtered by field values"
+      operationId: "listUsers"
+      parameters:
+        - name: "filterEmail"
+          in: query
+          type: string
+          description: "Only list the user with email exactly matching"
+          required: false
+        - name: "filterForename"
+          in: query
+          type: string
+          description: "Only list users with forenames exactly matching"
+          required: false
+        - name: "filterSurname"
+          in: query
+          type: string
+          description: "Only list users with surnames exactly matching"
+          required: false
+      responses:
+        200:
+          description: "Success. List of users returned in body."
+          schema:
+            $ref: "#/definitions/UserList"
 definitions:
   User:
     type: "object"
     properties:
       id:
-        type: "integer"
-        format: "int64"
+        type: "string"
         readOnly: true
       email:
         type: "string"
@@ -124,20 +143,13 @@ definitions:
         type: "string"
         format: "date-time"
         readOnly: true
+  UserList:
+    type: array
+    items:
+      $ref: '#/definitions/User'
   UserApiResponse:
     type: "object"
     properties:
-      code:
-        type: "integer"
-        format: "int32"
-      type:
-        type: "string"
       message:
         type: "string"
-  ErrorResponse:
-    required:
-      - message
-    properties:
-      message:
-        type: string
 
